# makelife-cad

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/macos/: CLAUDE.md  project.yml
app/macos/MakelifeCAD/: App.swift  main.swift
app/macos/MakelifeCAD.xcodeproj/: project.pbxproj
app/macos/MakelifeCAD/Bridge/: KiCadBridge.swift  KiCadNativeRenderer.swift  MakelifeCAD-Bridging-Header.h
app/macos/MakelifeCAD/Models/: AppleIntelligenceViewModel.swift  ComponentSearchClient.swift  FreeCADViewModel.swift  GitHubRepoViewModel.swift  PluginManager.swift
app/macos/MakelifeCAD/Views/: BOMWindow.swift  ComponentList.swift  CrossRefView.swift  GerberExportView.swift  GitHubPanel.swift  LayerPanel.swift  LiquidGlassModifiers.swift  PCB3DView.swift  PCBEditorView.swift  ProjectPanel.swift  PropertyEditor.swift  SchematicEditorView.swift  SchematicView.swift  ViolationsView.swift
docs/superpowers/specs/: 2026-04-01-makelife-desktop-design.md
electron/: main.ts  preload.ts
electron/bridges/: ai.ts  file-watcher.ts  freecad.ts  git.ts  github.ts  kicad.ts  mascarade.ts  platformio.ts
electron/utils/: detect-tools.ts  process-manager.ts
gateway/: app 2.py  app.py
kicad-bridge/: CMakeLists.txt
kicad-bridge/include/: kicad_bridge.h
kicad-bridge/src/: bridge_pcb.c  bridge_sch.c  kicad_bridge_internal.h
kicad-native/kicad-svg-helper/: CMakeLists.txt  kicad_svg_helper.cpp
makelife_cad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: kicad_drc_check.sh  kicad_smoke_check.sh
src/: global.d.ts  main.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/lib/: types.ts
src/pages/: AI.tsx  CI.tsx  Dashboard.tsx  Explorer.tsx  Firmware.tsx  Git.tsx  Settings.tsx
src/stores/: project.ts  ui.ts
src/styles/: globals.css
tests/: test_gateway.py
web/: package-lock.json
web/.next/: BUILD_ID  prerender-manifest.json  required-server-files.json  trace
web/.next/cache/: .previewinfo  .rscinfo
web/.next/cache/webpack/client-development/: index.pack.gz.old
web/.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
web/.next/cache/webpack/edge-server-production/: index.pack
web/.next/cache/webpack/server-development/: index.pack.gz.old
web/.next/cache/webpack/server-production/: index.pack
web/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
web/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
web/.next/server/chunks/: 778.js
web/.next/server/pages/: 500.html
web/.next/static/chunks/app/: layout-c791d4db44c3c3a6.js
web/.next/static/chunks/app/_not-found/: page-d82d0213e0ed75ca.js
web/.next/static/css/: 2b0c1a706ed27af5.css
web/.next/types/app/: layout.ts  page.ts
